- Changed Semantic Highlighting. - Typo Space Error - Rendering List from data for props.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,32 +1,32 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#ffffff",
-    "activityBar.background": "#ffffff",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#df9f9f",
-    "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "editorGroup.border": "#ffffff",
-    "panel.border": "#ffffff",
-    "sash.hoverBorder": "#ffffff",
-    "sideBar.border": "#ffffff",
-    "statusBar.background": "#ffcccc",
-    "statusBar.border": "#ffcccc",
-    "statusBar.debuggingBackground": "#ccffff",
-    "statusBar.debuggingBorder": "#ccffff",
-    "statusBar.debuggingForeground": "#15202b",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#ff9999",
-    "statusBarItem.remoteBackground": "#ffcccc",
-    "statusBarItem.remoteForeground": "#15202b",
-    "tab.activeBorder": "#ffffff",
-    "titleBar.activeBackground": "#ffcccc",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.border": "#ffcccc",
-    "titleBar.inactiveBackground": "#ffcccc99",
-    "titleBar.inactiveForeground": "#15202b99"
+    "activityBar.activeBackground": "#1a1a1a",
+    "activityBar.background": "#1a1a1a",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#606020",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "editorGroup.border": "#1a1a1a",
+    "panel.border": "#1a1a1a",
+    "sash.hoverBorder": "#1a1a1a",
+    "sideBar.border": "#1a1a1a",
+    "statusBar.background": "#000000",
+    "statusBar.border": "#000000",
+    "statusBar.debuggingBackground": "#000000",
+    "statusBar.debuggingBorder": "#000000",
+    "statusBar.debuggingForeground": "#e7e7e7",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#1a1a1a",
+    "statusBarItem.remoteBackground": "#000000",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "tab.activeBorder": "#1a1a1a",
+    "titleBar.activeBackground": "#000000",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.border": "#000000",
+    "titleBar.inactiveBackground": "#00000099",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#FFCCCC",
+  "peacock.color": "#000000",
   "cSpell.words": ["Spinaci"]
 }
